# MyBotBuilder

./: .gitignore  CMakeLists.txt  README.md  ai.cpp  bot.cpp  bot.h  botdiscord.cpp  botdiscord.h  botfactory.cpp  botfactory.h  bottelegram.cpp  bottelegram.h  chatgptai.cpp  chatgptai.h  commandhandler.cpp  commandhandler.h  config.h  dashboardui.cpp  dashboardui.h  discordbot.cpp  discordbot.h  discordconfig.cpp  discordconfig.h  handlerio.cpp  handlerio.h  handlerxml.cpp  handlerxml.h  jsonhandler.cpp  jsonhandler.h  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  scheduler.cpp  scheduler.h  settingsui.cpp  settingsui.h  telegrambot.cpp  telegrambot.h  telegramconfig.cpp  (+10 more)
